develop: start implementation of dump